# hades2-tools

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: static.yml
.zed/: tasks.json
crates/hades2/: Cargo.toml
crates/hades2-savefile-editor/: Cargo.toml
crates/hades2-savefile-editor/packaging/msi/: hades2-savefile-editor.wxs
crates/hades2-savefile-editor/src/: app.rs  main.rs
crates/hades2-savefile-editor/src/app/: luavalue.rs
crates/hades2/src/: lib.rs  steamlocate.rs
crates/hades2/src/parser/: luabins.rs  mod.rs
crates/hades2/src/saves/: mod.rs
testdata/: Profile.v17.sav  Profile.v18.sav
testdata/regression/: 1.sav
web/: Makefile  index.html  package.json  tsconfig.json  vite.config.js
web/rust-bindings/: Cargo.toml  Makefile
web/rust-bindings/src/: lib.rs
web/src/: json-view.d.ts  main.ts  style.css
