[package]
name = "hades2-savefile-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hades2 = { version = "0.1", path = "../hades2" }
time = "0.3"

serde = { version = "1", features = ["derive"] }
egui = "0.27"
catppuccin-egui = { version = "5.1", default-features = false, features = [
    "egui27",
] }
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
