[package]
name = "hades2-savefile-editor"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0"
hades2 = { version = "0.1", path = "../hades2" }
time = "0.3"

serde = { version = "1", features = ["derive"] }
egui = "0.31"
catppuccin-egui = { version = "5.1", default-features = false, features = [
    "egui31",
] }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11", "wayland"
] }
