[package]
name = "hades2"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0"
lz4_flex = { version = "0.11", default-features = false, features = [
    "std",
    "safe-encode",
    "safe-decode",
] }
thiserror = "2.0"
serde = { version = "1.0", optional = true }
adler32 = { version = "1.2", default-features = false }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.55"

[lints.clippy]
single_element_loop = "allow"

[dev-dependencies]
pretty_assertions = "1.4.1"
